remove nuclide.io style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,8 +26,9 @@
       s.setAttribute('href', href);
       s.setAttribute('type', 'text/css');
       document.getElementsByTagName('head')[0].appendChild(s);
-    }
-    loadStyle("//nuclide.io/static/fonts/332720/BC699FA675F9356E3.css");
+     }
+    // TODO(arnold) not sure this is required from wherever this was copied from
+    // loadStyle("//nuclide.io/static/fonts/332720/BC699FA675F9356E3.css");
     loadStyle("//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/default.min.css");
     loadStyle("//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
   });
