Add Dark Background Toggle Button Previously it was hard to see lighter colored components with transparency against the checkered background. This alleviates this by allowing the user to toggle the background to a dark checkered pattern. Fixes #21

--- a/plugin/src/py/android_screenshot_tests/default.css
+++ b/plugin/src/py/android_screenshot_tests/default.css
@@ -10,6 +10,10 @@ img {
     background-image: url("background.png");
 }
 
+.img-wrapper.dark {
+    background-image: url("background_dark.png");
+}
+
 div.screenshot {
     padding: 10px;
 }
