--- a/examples/app-example-multipledevices/app/src/main/res/values/colors.xml
+++ b/examples/app-example-multipledevices/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="warning">#FFFF00</color>
+    <color name="error">#FF0000</color>
+    <color name="ok">#00FF00</color>
 </resources>
