--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
   <div id="footer_wrap" class="wrapper footerWrapper">
     <section id="fb_oss" class="fbOpenSourceFooter">
       <a href="https://code.facebook.com/projects/" target="_blank"><img src="{{ site.baseurl }}/static/oss_logo.png" alt="Facebook Open Source" title="Facebook Open Source" /></a>
+      Copyright © Meta Platforms, Inc
     </section>
   </div>
 </div>
