Make footer text white

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -228,6 +228,7 @@ h1, h2, h3, h4 {
 
 .footerContainer {
   background: $footer-bg;
+  color: #ffffff;
   
   .footerWrapper {
     padding-top: 4vh;
