Adding social banner

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,3 +54,13 @@ $content-width:     900px;
         "slideshow",
         "syntax-highlighting"
 ;
+
+/* Social Banner */
+.socialBanner {
+	font-weight: bold;
+	font-size: 20px;
+	padding: 20px;
+	max-width: 768px;
+	margin: 0 auto;
+	text-align: center;
+}
