--- a/css/main.scss
+++ b/css/main.scss
@@ -63,4 +63,10 @@ $content-width:     900px;
 	max-width: 768px;
 	margin: 0 auto;
 	text-align: center;
+  color: white;
+}
+
+.socialBanner a {
+    text-decoration: underline;
+    color: white;
 }
